--- a/0-/GSoC:2007/Service Clients.mediawiki
+++ b/0-/GSoC:2007/Service Clients.mediawiki
@@ -2,7 +2,7 @@
 |student=[[User:zeegeek|Ning Shi]]
 |mentor=[[S%C3%A9bastien_Cevey|SÃ©bastien Cevey]]
 |cmilestone=Final Evaluation
-|nmilestone=Service clients
+|nmilestone=Create Bindings
 
 |description=
 Service client idea empowers XMMS2 with unlimited expendibility.  Different service clients can register themselves to the server so that when normal clients want to tag a music file for example, the service client will know what to do.  Or normal clients want to look up some data from MusicBrainz.org, service client can perform the search and return the results to the normal clients.  In this way, normal clients can share additional features provided by different service clients without having to implement them in every normal client over and over again.
