Fixed link to doxygen documentation.
Levitation import of page 764 rev 7867.

--- a/0-/Writing XMMS2 Clients.mediawiki
+++ b/0-/Writing XMMS2 Clients.mediawiki
@@ -44,7 +44,7 @@ The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT", "SHOULD", "S
 == See Also ==
 * [[Design of XMMS2]]
 * [[Generic properties policy]]
-* [http://doxygen.xmms2.xmms.se/current/ Doxygen documentation]
+* [http://doxygen.xmms2.xmms.se/ Doxygen documentation]
 * [http://xmms2.xmms.se/epydoc/index.html Python bindings documentation]
 
 [[Category:XMMS2 Technical Details]]
