--- a/0-/MPRIS Metadata.mediawiki
+++ b/0-/MPRIS Metadata.mediawiki
@@ -36,7 +36,7 @@ See http://www.linuxselfhelp.com/HOWTO/MP3-HOWTO-13.html#ss13.3
 (uint32) When the performing was realized.
 It is represented as epoch, i.e. the number of seconds since Â« 00:00:00 1970-01-01 UTC Â»
 
-== "arturl" ===
+=== "arturl" ===
 (string) An URI to an image associated with the work
 
 === Informational for external services ===
