--- a/0-/MPRIS.mediawiki
+++ b/0-/MPRIS.mediawiki
@@ -55,7 +55,7 @@ i.e. calling Quit with qdbus on VLC would be:
 
 == The Methods ==
 
-=== / ===
+=== / (Root) object ===
 
 ==== Identity ====
 Identify the "Media Player" as in "VLC 0.9.0", "bmpx 0.34.9", "Audacious 1.4.0" ...
