--- a/0-/MPRIS.mediawiki
+++ b/0-/MPRIS.mediawiki
@@ -58,7 +58,12 @@ i.e. calling Quit with qdbus on VLC would be:
 === / (Root) object ===
 
 ==== Identity ====
-Identify the "Media Player" as in "VLC 0.9.0", "bmpx 0.34.9", "Audacious 1.4.0" ...
+Identify the "media player" as in "VLC 0.9.0", "bmpx 0.34.9", "Audacious 1.4.0" ...
+
+===== Return value: ===== 
+* A string containing the media player identification. 
+
+===== Introspection data: =====
 
    <method name="Identity">
      <arg type="s" direction="out"/>
