--- a/0-/MPRIS.mediawiki
+++ b/0-/MPRIS.mediawiki
@@ -110,14 +110,14 @@ Removes an URI from the "TrackList", given its position
      <arg type="i" />
    </method>
 
-==== Loop ====
+==== SetLoop ====
 Toggle playlist loop.
 
    <method name="Loop">
      <arg type="b" />
    </method>
 
-==== Random ====
+==== SetRandom ====
 Toggle playlist shuffle / random. It may or may not play tracks only once.
 
    <method name="Random">
