--- a/0-/MPRIS.mediawiki
+++ b/0-/MPRIS.mediawiki
@@ -164,10 +164,14 @@ Toggle the current track repeat.
    </method>
 
 ==== GetStatus ====
-Return the status of "Media Player": 0 = Playing, 1 = Paused, 2 = Stopped. ([TODO] Expand the status stuff [Loop? Repeat?])
+Return the status of "Media Player" as a struct of 4 ints:
+* First integer: 0 = Playing, 1 = Paused, 2 = Stopped.
+* Second interger: 0 = Playing linearly , 1 = Playing randomly.
+* Third integer: 0 = Go to the next element once the current has finished playing , 1 = Repeat the current element
+* Fourth integer: 0 = Stop playing once the last element has been played, 1 = Never give up playing
 
    <method name="GetStatus">
-   <arg type="i" direction="out"/>
+   <arg type="(iiii)" direction="out"/>
    </method>
 
 ==== GetMetadata ====
